--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   },
   "dependencies": {
     "grunt": "~0.3.9",
-    "styletto": "git://github.com/jetstyle/styletto.git#develop"
+    "styletto": "~0.3.0"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
   },
   "keywords": [
-    "gruntplugin styletto"
+    "gruntplugin"
   ]
 }
