--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   },
   "dependencies": {
     "grunt": "~0.3.9",
-    "styletto": "~0.3.0"
+    "styletto": "~0.3.1"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "styletto"
   ]
 }
