--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   "bugs": {
     "url": "git@github.com:i-akhmadullin/grunt-styletto.git/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/i-akhmadullin/grunt-styletto/blob/master/LICENSE-MIT"
-    }
-  ],
+  "licenses": [{
+    "type": "MIT",
+    "url": "https://github.com/i-akhmadullin/grunt-styletto/blob/master/LICENSE-MIT"
+  }],
   "main": "grunt.js",
   "bin": "bin/grunt-styletto",
   "engines": {
