--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-styletto",
   "description": "Grunt plugin for processing CSS with Styletto",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "homepage": "https://github.com/i-akhmadullin/grunt-styletto",
   "author": {
     "name": "Ilya Akhmadullin",
@@ -27,7 +27,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "styletto": "~0.3.1"
+    "styletto": ">=0.3.5"
   },
   "devDependencies": {
     "grunt": "~0.3.9"
