--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   "main": "grunt.js",
   "bin": "bin/grunt-styletto",
   "engines": {
-    "node": "*"
+    "node": "0.8"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "styletto": ">=0.3.5"
+    "styletto": ">=0.4.0"
   },
   "devDependencies": {
-    "grunt": "~0.3.9"
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "*"
   },
   "keywords": [
     "gruntplugin",
