--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-styletto",
   "description": "Grunt plugin for processing CSS with Styletto",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "homepage": "https://github.com/i-akhmadullin/grunt-styletto",
   "author": {
     "name": "Ilya Akhmadullin",
@@ -27,11 +27,10 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "styletto": ">=0.4.0"
+    "styletto": ">=0.4.3"
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-contrib-jshint": "*"
+    "grunt": "~0.3.9"
   },
   "keywords": [
     "gruntplugin",
