--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-styletto",
   "description": "Grunt plugin for processing CSS with Styletto",
-  "version": "0.3.2",
+  "version": "0.4.0rc",
   "homepage": "https://github.com/i-akhmadullin/grunt-styletto",
   "author": {
     "name": "Ilya Akhmadullin",
@@ -24,13 +24,14 @@
     "node": "0.8"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt"
   },
   "dependencies": {
     "styletto": ">=0.4.3"
   },
   "devDependencies": {
-    "grunt": "~0.3.9"
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "*"
   },
   "keywords": [
     "gruntplugin",
