--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-styletto",
   "description": "Grunt plugin for processing CSS with Styletto",
-  "version": "0.4.0rc",
+  "version": "0.4.0rc2",
   "homepage": "https://github.com/i-akhmadullin/grunt-styletto",
   "author": {
     "name": "Ilya Akhmadullin",
@@ -27,7 +27,7 @@
     "test": "grunt"
   },
   "dependencies": {
-    "styletto": ">=0.4.3"
+    "styletto": "~0.4.3"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
